# libinput-gestures-macos

./: Cargo.toml  README.md  project.code-workspace
example/: config.ini
src/: config.rs  context.rs  main.rs  tracking.rs
src/context/: eventd.rs  interface.rs
